--- a/build.yaml
+++ b/build.yaml
@@ -1,4 +1,4 @@
-image: "ghcr.io/home-assistant/{arch}-builder"
+image: "ghcr.io/lildude/{arch}-builder"
 build_from:
   aarch64: "ghcr.io/home-assistant/aarch64-base:3.18"
   armv7: "ghcr.io/home-assistant/armv7-base:3.18"
